[package]
name = "spellings_db_thrift"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
fbthrift = "0.0"
once_cell = "1.17"

[lib]
name = "spellings_db_thrift"
path = "spellings_db.rs"
