[package]
name = "uefisettings_spellings_db_thrift"
description = "Spellings DB for the tool to read/get/extract and write/change/modify BIOS/UEFI settings from Linux terminal."
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause"
homepage = "https://github.com/linuxboot/uefisettings"

[dependencies]
anyhow = "1.0"
fbthrift = "0.0"
once_cell = "1.17"

[lib]
name = "uefisettings_spellings_db_thrift"
path = "uefisettings_spellings_db.rs"
